ignore npy, log files and datasets directory

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@
 *.jpg
 *.gif
 *.txt
+*.npy
+*.log
 
 # ignore dirictories
 log/
 save/
 __pycache__/
 data/
+datasets/
 processed_data/
 checkpoints/
 test_results/
